:pencil: docs: atualiza documentacao swagger
